Subiendo tema al repositorio nuevo cambio

--- a/darkspace/package.json
+++ b/darkspace/package.json
@@ -19,7 +19,7 @@
         ]
     },
     "author": {
-        "name": "code-binary",
+        "name": "Yes Dev",
         "email": "yesdev19@gmail.com"
     },
     "repository": {
