--- a/darkspace/package.json
+++ b/darkspace/package.json
@@ -18,6 +18,7 @@
             }
         ]
     },
+    "icon": "img/dark.png",
     "author": {
         "name": "Yes Dev",
         "email": "yesdev19@gmail.com"
