Subiendo tema al repositorio nuevo cambio

--- a/darkspace/package.json
+++ b/darkspace/package.json
@@ -18,7 +18,7 @@
             }
         ]
     },
-    "icon": "img/dark.svg",
+    "icon": "img/dark.png",
     "author": {
         "name": "Yes Dev",
         "email": "yesdev19@gmail.com"
